compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__shadowed_function_argument.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn go(_x) {\n  x + 1\n}\n"
---
----- SOURCE CODE

pub fn go(_x) {
  x + 1
}


----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:3:3
  │
2 │ pub fn go(_x) {
  │           -- This value is discarded
3 │   x + 1
  │   ^ So this is not in scope

Hint: Change `_x` to `x` or reference another variable
